# NotUneal-Engine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  FAQ.md  LICENSE  PROJECT_STRUCTURE.md  README.md  README_FULL.md  RELEASE_NOTES.md  ROADMAP.md  build.bat  build.sh
Documentation/: ARCHITECTURE.md  ASSET_MANAGEMENT_GUIDE.md  BUILD_DISTRIBUTION_GUIDE.md  GETTING_STARTED.md  RENDERING_GUIDE.md  SHADER_EDITOR_GUIDE.md
Editor/: CMakeLists.txt  Editor.cpp  Editor.h  EditorViewport.cpp  EditorViewport.h  ProjectSettings.cpp  ProjectSettings.h
Engine/: NotUneal.h
Engine/Assets/: AssetManager.cpp  AssetManager.h  AssetPackage.cpp  AssetPackage.h
Engine/Components/: CMakeLists.txt  LightComponent.cpp  LightComponent.h  MeshComponent.cpp  MeshComponent.h
Engine/Core/: CMakeLists.txt
Engine/Core/src/: Core.h  Types.h
Engine/Framework/: GameFramework.cpp  GameFramework.h
Engine/Input/: InputSystem.cpp  InputSystem.h
Engine/Rendering/: CMakeLists.txt
Engine/Rendering/src/: Camera.cpp  Camera.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h
Engine/Scene/: CMakeLists.txt
Engine/Scene/src/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  TransformComponent.cpp  TransformComponent.h
Engine/Serialization/: Archive.h  Serializable.h
Engine/ShaderEditor/: CMakeLists.txt  ShaderGraph.cpp  ShaderGraph.h  ShaderNode.cpp  ShaderNode.h  ShaderNodes.cpp  ShaderNodes.h
Examples/: AssetManagementExample.cpp  CMakeLists.txt  ShaderEditorExample.cpp  SimpleScene.cpp
Tools/: BuildTools.cpp  BuildTools.h  CMakeLists.txt
